--- a/src/global.css
+++ b/src/global.css
@@ -1,5 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500&display=swap');
 
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+}
+
+:root {
+   --white: #ffffff;
+
+   --gray-100: #e1e1e6;
+   --gray-300: #a8a8b3;
+   --gray-700: #323238;
+   --gray-800: #29292e;
+   --gray-850: #1f2729;
+   --gray-900: #121214;
+
+   --teal-300: #4FD1C5;
+   --pink-500: #D53F8C;
+   --cyan-500: #61dafb;
+   --yellow-500: #eba417;
+}
+
+@media (max-width: 1080px) {
+   html {
+      font-size: 93.75%;
+   }
+}
+
+@media (max-width: 720px) {
+   html {
+      font-size: 87.5%;
+   }
+}
+
 body {
    font-family: 'Roboto', sans-serif;
+   background: var(--gray-900);
+   color: var(--gray-100);
+   height: 100vh;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.App {
+   outline: 1px solid var(--cyan-500);
+   width: auto;
+   text-align: center;
+   padding: 10px;
+}
+
+.App h1 {
+   margin-top: 20px;
+}
+
+.output {
+   border: .1rem solid var(--pink-500);
+   width: 200px;
+   height: 200px
 }
