--- a/src/global.css
+++ b/src/global.css
@@ -51,12 +51,13 @@ body {
    padding: 10px;
 }
 
-.App h1 {
-   margin-top: 20px;
+.App h1,
+.App input {
+   margin-top: 15px;
 }
 
 .output {
-   border: .1rem solid var(--pink-500);
    width: 200px;
-   height: 200px
+   height: 200px;
+   background-color: var(--pink-500)
 }
